responsive desktop (fix overflow hidden!)

--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -10,9 +10,15 @@
         height: 70vh;
     }
 }
+
 .resto_1 {
     margin-top: -4rem;
     background-color: colors.$lightgrey;
+    @media (min-width: 1500px){
+        max-width: 50%;
+        margin-top: -7rem;
+        padding: 0rem 40rem;
+    }
     h2 {
         font-family: "Shrikhand", "sans-serif";
         padding: 2rem 1rem;
@@ -49,8 +55,8 @@
             background-color: colors.$green;
             overflow: hidden;
             border-radius: 0px 15px 15px 0px;
-            width: 3rem;
-            margin-right: -3rem;
+            width: 2.8rem;
+            margin-right: -2.8rem;
             transition: all 0.2s ease-in-out;
             }
             &:hover .menu-item__check{
@@ -59,6 +65,7 @@
                 width: 4rem;
             }
             & .menu-item__check {
+                overflow: hidden;
                 display: grid;
                 color: white;
                 font-size: 1.5rem;
